# haptix-tools

./: CMakeLists.txt
shortcuts/: CMakeLists.txt  PostInstall.cmake  PostInstall.sh  PreInstall.cmake  PreInstall.sh  checkStereo.desktop  haptixLukeLeft.desktop  haptixLukeLeftStart  haptixLukeRight.desktop  haptixLukeRightStart  haptixMPLLeftStart  haptixMPLLeftStart.desktop  haptixMPLRightStart  haptixMPLRightStart.desktop  haptixStart  haptixStart.desktop  haptixSupport  haptixSupport.desktop  haptixUpdate  haptixUpdate.desktop
shortcuts/icons/: CMakeLists.txt
vm/: CMakeLists.txt  PostInstall.cmake  haptix_vm.conf
xorg/: CMakeLists.txt  S15haptixXorg  xorg.conf  xorg.conf.haptix
